Fix color of disabled inputs on mobile

--- a/src/resources/sass/components/_profile.scss
+++ b/src/resources/sass/components/_profile.scss
@@ -88,6 +88,9 @@
 			border: none;
 			margin: 0;
 			padding: 0;
+			color: #546785;
+			-webkit-text-fill-color: rgba(#546785, 1);
+			opacity: 1;
 
 			@include min-screen($screen-sm-min) {
 				padding: 9px 0;
